[tool.poetry]
name = "killthedementors"
version = "0.1.0"
description = ""
authors = ["Marten Jaago <marten.jaago@revolut.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
pygame = "2.6.0"
websockets = "14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
